Fixed main heading spacing

--- a/css/main.css
+++ b/css/main.css
@@ -271,6 +271,9 @@ blockquote p {
 .pagination .next {
   text-align: right;
 }
+.content > h1, .content > h2 {
+  margin-top: 50px;
+}
 .white-panel {
   background-color: white;
   border: 1px solid #ebebeb;
